# final-pretty-printer

./: .gitignore  .travis.yml  CairoDemo.hs  ExtPrec.hs  LICENSE  ListDemo.hs  Pretty.hs  README.md  RenderHTML.hs  STLCDemo.hs  Words.hs  final-pretty-printer.cabal  pretty-monadic-printer.cabal  stack.yaml  stlc_demo.css  stlc_demo.html
Demos/: ListDemo.hs  STLCDemo.hs  stlc_demo.html
Exts/: ExtPrec.hs
Rendering/: RenderConsole.hs  RenderHTML.hs
Text/PrettyPrint/: Final.hs
Text/PrettyPrint/Final/: Words.hs
Text/PrettyPrint/Final/Demos/: ListDemo.hs  PerTest.hs  STLCDemo.hs
Text/PrettyPrint/Final/Extensions/: Environment.hs  Precedence.hs
Text/PrettyPrint/Final/Rendering/: Console.hs  HTML.hs  PlainText.hs
