name:                final-pretty-printer
version:             0.1.0.0
synopsis:            Extensible pretty printing with semantic annotations and proportional fonts

description:         This is the Final Pretty Printer, an extensible
                     prettry printing library that supports semantic
                     annotations and proportional-width fonts.

                     The library is extensible because it uses a
                     final, rather than initial, encoding of pretty
                     printer documents - they are monadic programs,
                     rather than a datatype.  This means it can be
                     extended by monad transformers.
                     Semantic annotations allow pretty printer
                     documents to contain references to the data that
                     they represent, which can enable interactive output.
                     Proportional-width fonts are supported by
                     allowing the measurement of widths to be
                     performed in some arbitrary monad, so IO can be
                     used to look at the output of a font rendering library.

license:             MIT
license-file:        LICENSE
author:              David Christiansen and David Darais and Weixi Ma
maintainer:          david@davidchristiansen.dk
copyright:           Copyright (c) 2016-2017 David Darais, David Christiansen, and Weixi Ma
category:            Text
build-type:          Simple
--extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: git://github.com/david-christiansen/final-pretty-printer.git

library
  default-language: Haskell2010
  exposed-modules:
                  Text.PrettyPrint.Final
                , Text.PrettyPrint.Final.Words
                , Text.PrettyPrint.Final.Extensions.Environment
                , Text.PrettyPrint.Final.Extensions.Precedence
                , Text.PrettyPrint.Final.Rendering.HTML
                , Text.PrettyPrint.Final.Rendering.Console
                , Text.PrettyPrint.Final.Rendering.PlainText
  other-modules:
                Text.PrettyPrint.Final.Demos.STLCDemo
              , Text.PrettyPrint.Final.Demos.ListDemo
  other-extensions:
                   KindSignatures
                 , MultiParamTypeClasses
                 , FunctionalDependencies
                 , ScopedTypeVariables
                 , DeriveFunctor
                 , FlexibleContexts
  build-depends:
                base >= 4.3 && < 4.10
              , mtl  >= 2.1 && < 2.3
              , text == 1.2.*
              , ansi-terminal == 0.6.*
              , containers == 0.5.*
              , temporary >= 1.1
              , exceptions == 0.8.*
  -- hs-source-dirs:
