name:                pretty-monadic-printer
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              David Christiansen and David Darais and Weixi Ma
maintainer:          david.darais@gmail.com
-- copyright:
category:            Text
build-type:          Simple
--extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  default-language: Haskell2010
  exposed-modules:
                  Text.PrettyPrint.Final
                , Text.PrettyPrint.Final.Words
                , Text.PrettyPrint.Final.Extensions.Environment
                , Text.PrettyPrint.Final.Extensions.Precedence
                , Text.PrettyPrint.Final.Rendering.HTML
                , Text.PrettyPrint.Final.Rendering.Console
  other-modules:
                Text.PrettyPrint.Final.Demos.STLCDemo
              , Text.PrettyPrint.Final.Demos.ListDemo
  other-extensions:
                   KindSignatures
                 , MultiParamTypeClasses
                 , FunctionalDependencies
                 , ConstraintKinds
                 , ScopedTypeVariables
                 , DeriveFunctor
                 , FlexibleContexts
  build-depends:
                base == 4.9.*
              , mtl  == 2.2.*
              , text == 1.2.*
              , ansi-terminal == 0.6.*
              , containers == 0.5.*
  -- hs-source-dirs:
